[package]
name = "plugin_tls"
version = "0.4.0"
authors = ["Alex Franchuk <alex.franchuk@gmail.com>"]
edition = "2018"
description = "Thread-local and statics storage across dynamic library boundaries."
readme = "README.md"
repository = "https://github.com/afranchuk/plugin_tls"
license = "MIT"
keywords = ["thread-local-storage","static-storage","plugin","plugins"]

[dependencies]
abi_stable = "0.9"

[features]
default = []
host = []
plugin = []

[package.metadata.docs.rs]
all-features = true
